--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,14 +13,7 @@
 		"jsx": "preserve",
 		"incremental": true,
 		"baseUrl": ".",
-
-		"paths": {
-			"@config/*": ["./src/config/*"],
-			"@controllers/*": ["./src/controllers/*"],
-			"@database/*": ["./src/database/*"],
-			"@errors/*": ["./src/errors/*"],
-			"@models/*": ["./src/models/*"],
-			"@views/*": ["./src/views/*"]
-		}
+		"experimentalDecorators": true,
+		"emitDecoratorMetadata": true,
 	}
 }
