--- a/package.json
+++ b/package.json
@@ -12,23 +12,25 @@
 		"typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
 	},
 	"dependencies": {
-		"@types/cors": "^2.8.13",
-		"@types/express": "^4.17.17",
-		"@types/multer": "^1.4.7",
-		"@types/yup": "^0.32.0",
 		"cors": "^2.8.5",
-		"express": "^4.18.2",
+		"express": "^4.17.1",
 		"express-async-errors": "^3.1.1",
-		"multer": "^1.4.5-lts.1",
-		"sqlite3": "^5.1.6",
-		"ts-node-dev": "^2.0.0",
-		"typeorm": "^0.3.16",
-		"typescript": "^5.1.3",
-		"yup": "^1.2.0"
+		"multer": "^1.4.2",
+		"sqlite3": "^5.0.0",
+		"typeorm": "^0.2.28",
+		"yup": "^0.29.3"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^17.6.5",
 		"@commitlint/config-conventional": "^17.6.5",
-		"husky": "^8.0.3"
+		"husky": "^8.0.3",
+
+		"@types/cors": "^2.8.13",
+		"@types/express": "^4.17.17",
+		"@types/multer": "^1.4.7",
+		"@types/yup": "^0.32.0",
+
+		"ts-node-dev": "^2.0.0",
+		"typescript": "^5.1.3"
 	}
 }
